src/objects/Disclosure__c.object
<CustomObject>
    <description>Records of Contacts that have financial relationships to disclose</description>
    <fields>
        <fullName>Activity_Role__c</fullName>
        <label>Activity Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program Committee</fullName>
                </value>
                <value>
                    <fullName>Session Chairperson</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Abstract Submission</fullName>
                </value>
                <value>
                    <fullName>Late Breaking and Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Chairperson</fullName>
                </value>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Invited Speaker</fullName>
                </value>
                <value>
                    <fullName>Panelist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CME_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CME Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Date(Year(Start_Date__c) + 1,Month(Start_Date__c), Day(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fon Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Abbreviation__c</fullName>
        <formula>LEFT(IF( INCLUDES(Relationship_Type__c, &apos;Employment&apos;), &apos;E,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Fiduciary Officer&apos;), &apos;FO,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Independent Contractor&apos;), &apos;IC,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Stock&apos;), &apos;S,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Stock Option&apos;), &apos;SO,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other Securities&apos;), &apos;OS,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other Business Ownership&apos;), &apos;OBO,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Grant/Contract&apos;), &apos;GC,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Travel&apos;), &apos;T,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Gift&apos;), &apos;G,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Patent&apos;), &apos;P,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Trademark&apos;), &apos;TM,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Copyright&apos;), &apos;C,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other Intellectual Property&apos;), &apos;OIP,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other&apos;), &apos;O,&apos;, &apos;&apos;),

LEN(IF( INCLUDES(Relationship_Type__c, &apos;Employment&apos;), &apos;E,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Fiduciary Officer&apos;), &apos;FO,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Independent Contractor&apos;), &apos;IC,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Stock&apos;), &apos;S,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Stock Option&apos;), &apos;SO,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other Securities&apos;), &apos;OS,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other Business Ownership&apos;), &apos;OBO,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Grant/Contract&apos;), &apos;GC,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Travel&apos;), &apos;T,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Gift&apos;), &apos;G,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Patent&apos;), &apos;P,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Trademark&apos;), &apos;TM,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Copyright&apos;), &apos;C,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other Intellectual Property&apos;), &apos;OIP,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other&apos;), &apos;O,&apos;, &apos;&apos;)) - 1)</formula>
        <label>Relationship Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Fiduciary Officer</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Stock Option</fullName>
                </value>
                <value>
                    <fullName>Other Securities</fullName>
                </value>
                <value>
                    <fullName>Other Business Ownership</fullName>
                </value>
                <value>
                    <fullName>Grant/Contract</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Patent</fullName>
                </value>
                <value>
                    <fullName>Trademark</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Other Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Advisor/Board Member</fullName>
                    <isActive>false</isActive>
                    <label>Advisor/Board Member</label>
                </value>
                <value>
                    <fullName>Consultant/Independent Contractor</fullName>
                    <isActive>false</isActive>
                    <label>Consultant/Independent Contractor</label>
                </value>
                <value>
                    <fullName>Full-time/part-time Employee</fullName>
                    <isActive>false</isActive>
                    <label>Full-time/part-time Employee</label>
                </value>
                <value>
                    <fullName>Grants/Research Support Recipient</fullName>
                    <isActive>false</isActive>
                    <label>Grants/Research Support Recipient</label>
                </value>
                <value>
                    <fullName>Honorarium Recipient</fullName>
                    <isActive>false</isActive>
                    <label>Honorarium Recipient</label>
                </value>
                <value>
                    <fullName>Speaker&apos;s Bureau</fullName>
                    <isActive>false</isActive>
                    <label>Speaker&apos;s Bureau</label>
                </value>
                <value>
                    <fullName>Stock Shareholder (Self Managed)</fullName>
                    <isActive>false</isActive>
                    <label>Stock Shareholder (self managed)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationships_to_Disclose__c</fullName>
        <label>Relationships to Disclose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Disclosure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Event_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Disclosure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>